# draft

./: .gitignore  Cargo.toml  index.html
draft-desktop/: Cargo.toml
draft-desktop/src/: main.rs
draft-kernel/: Cargo.toml  build.rs
draft-kernel/src/: draft.rs  draft_camera.rs  draft_gui.rs  draft_instance.rs  draft_material.rs  draft_model.rs  draft_texture.rs  draft_util.rs  lib.rs
draft-kernel/src/draft_camera/: draft_camera.rs  draft_camera_manager.rs  draft_camera_orthographic.rs  draft_camera_perspective.rs  draft_camera_projection.rs  draft_camera_uniform.rs
draft-kernel/src/draft_gui/: draft_gui_render.rs
draft-kernel/src/draft_util/: resource_util.rs
draft-kernel/src/kernel/: draft_camera.rs  draft_instance.rs
draft-kernel/src/kernel/shader/: shader.wgsl
draft-kernel/src/shader/: shader.wgsl
draft-server/: Cargo.toml
src/: app.rs  kernel.rs  lib.rs  main.rs  shader.wgsl  state.rs
src/kernel/: draft.rs  draft_material.rs  draft_mesh.rs  draft_model.rs  draft_surface.rs  draft_texture.rs  draft_vertex.rs  util.rs
src/kernel/shader/: shader.wgsl
src/kernel/util/: draft_app_type.rs  resource_util.rs
src/util/: size.rs
