[package]
name = "draft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "Draft"
path = "src/main.rs"

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive"] }
cfg-if = "1.0.0"
log = "0.4.22"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
wgpu = "0.20.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"
winit = "0.30.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
env_logger = "0.11.3"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
] }
