[package]
name = "draft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "Draft"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2.92"

[dependencies.bevy]
version = "0.14.0"
default-features = false
features = [
    "animation",
    "bevy_animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "dynamic_linking",
    "webgpu",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
