[package]
name = "draft-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.16.1", features = ["derive"] }
cfg-if = "1.0.0"
chrono = "0.4.38"
glam = "0.28.0"
log = "0.4.22"
time = "0.3.36"
tracing = "0.1.40"
tracing-appender = "0.2.3"
web-time = "1.1.0"
wgpu = "0.20.1"
winit = "0.30.3"

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["time"]

[dependencies.tobj]
version = "4.0.2"
features = ["async"]

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["png", "jpeg"]


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
env_logger = "0.11.3"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
getrandom = { version = "0.2.15", features = ["js"] }
reqwest = "0.12.5"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Window",
    "Location",
    "Document",
    "Element",
    "HtmlCanvasElement",
] }


[build-dependencies]
anyhow = "1.0.86"
fs_extra = "1.3.0"
glob = "0.3.1"
